--- a/index.html
+++ b/index.html
@@ -365,9 +365,8 @@
               </h2>
 
               <p class="title-sm section-text">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour.
+                Empowering Minds, Shaping Futures: Unlock the Power of Knowledge
+                to Transform Your World.
               </p>
 
               <ul class="progress-list">
