--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
   -->
     <title>Skillharbor</title>
     <meta name="title" content="Skillharbor" />
-    <meta
-      name="description"
-      content="This is a education html template made by codewithsadee"
-    />
+    <meta name="description" content="This is a educational website" />
 
     <!-- 
     - favicon
@@ -57,7 +54,7 @@
             src="https://files.oaiusercontent.com/file-AfO9DZU1nRZhMQtZnzmfSSeM?se=2024-01-03T15%3A57%3A07Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3Da97a5c1c-9997-43b8-b1a8-9a39cb53ec02.webp&sig=D0TjeJ8izdkzo2mhnHI0wgtds/T16j%2BG5jPXPuSD%2BJg%3D"
             width="145"
             height="27"
-            alt="Skillharbor home"
+            alt="Skillharbor logo"
           />
         </a>
 
@@ -68,7 +65,7 @@
                 src="./assets/images/logo.svg"
                 width="145"
                 height="27"
-                alt="Skillharbor home"
+                alt="Skillharbor logo"
               />
             </a>
 
@@ -994,7 +991,7 @@
                 src="https://files.oaiusercontent.com/file-AfO9DZU1nRZhMQtZnzmfSSeM?se=2024-01-03T15%3A57%3A07Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3Da97a5c1c-9997-43b8-b1a8-9a39cb53ec02.webp&sig=D0TjeJ8izdkzo2mhnHI0wgtds/T16j%2BG5jPXPuSD%2BJg%3D"
                 width="145"
                 height="27"
-                alt="Skillharbor home"
+                alt="Skillharbor logo"
               />
             </a>
 
